@@ -8,6 +8,8 @@ Client library:
 - Free memory used by OpenSSL in mosquitto_lib_cleanup() where possible.
 - Change WebSocket subprotocol name to mqttv3.1 to make future changes easier
   and for compatibility with other implementations.
+- Add mosquitto_loop_forever() / loop_forever() function call to make simple
+  clients easier.
 
 Clients:
 - Clients now display their own version number and library version number in
